[gd_scene load_steps=4 format=3 uid="uid://dwg2yia8pjpea"]

[ext_resource type="Script" path="res://scenes/game/tray.gd" id="1_ov7mi"]
[ext_resource type="Texture2D" uid="uid://biich14ui0iqs" path="res://assets/textures/tray.png" id="2_ut6kw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyhvq"]
size = Vector2(40, 86)

[node name="Tray" type="Node2D" node_paths=PackedStringArray("sprite")]
script = ExtResource("1_ov7mi")
sprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_ut6kw")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 48)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_hyhvq")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-1, 13)
collision_layer = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-48, 50, -43, 50, -41, -69, 43, -68, 43, 48, 47, 51, 49, -77, -45, -77, -54, 49)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
